# smm-webconfig

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mgServer.cpp  mgServer.hpp
doc/: doxygen-config  doxygen_sqlite3.db
doc/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  group___c_a_l_l_b_a_c_k___r_e_t_v_a_l_s.html  group___callback.html  index.html  menudata.js  mg__server_8h.html  mg__server_8h_source.html  modules.html  structcallback__map__t-members.html  structcallback__map__t.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  groups_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js
doc/latex/: annotated.tex  files.tex  group___c_a_l_l_b_a_c_k___r_e_t_v_a_l_s.tex  group___callback.tex  mg__server_8h.tex  modules.tex  refman.tex  structcallback__map__t.tex
src/: callback_map.c  main.c  main.cpp  smmServer.cpp  smmServer.hpp  smm_server.c  smm_server.h
web_root/: index.html
